<resources>
    <string name="app_name">धनावंशी स्वामी समाज</string>
    <string name="naam_se_khoje">नाम से खोजे</string>
    <string name="sthan_se_khoje">स्थान से खोजे</string>
    <string name="chhanti_gyi_suchi">छांटी गयी सूचि</string>
    <string name="mere_sadsy">मेरे सदस्य</string>
    <string name="sikayt_ya_sujhav">शिकायत/सुझाव</string>
    <string name="hmare_bare_me">हमारे बारे में</string>
    <string name="about">हमारे बारे में</string>
    <string name="contact_us">संपर्क करें</string>
    <string name="share">साझा करें</string>
    <string name="pita_ka_naam">पिता का नाम</string>
    <string name="gotr">गोत्र</string>
    <string name="niwasi">निवासी</string>
    <string name="sheksnik_yogyta">शेक्षणिक योग्यता</string>
    <string name="min_age">न्यूनतम आयु</string>
    <string name="max_age">अधिकतम आयु</string>
    <string name="prinam">परिणाम</string>
    <string name="not_found">परिणाम नहीं मिले</string>
    <string name="total_result">परिणामों की संख्या</string>
    <string name="suchi_me_jode">सूचि में जोड़े</string>
    <string name="sampadit_kren">संपादित करें</string>
    <string name="dob">जन्म की तिथि</string>
    <string name="gender">लिंग</string>
    <string name="mobile_no">मोबाइल नंबर</string>
    <string name="vevahik_sthiti">वैवाहिक स्थिति</string>
    <string name="mata_ka_naam">माता का नाम</string>
    <string name="mata_ki_gotr">माता की गोत्र</string>
    <string name="mata_ka_ganv">माता का गाँव</string>
    <string name="pita_ka_ganv">पिता का गाँव</string>
    <string name="bhai_bahn">भाई एंव बहन</string>
    <string name="work">कार्य</string>
    <string name="past_wife">भूतपूर्व जीवनसाथी</string>
    <string name="patni_ka_naam">जीवनसाथी का नाम</string>
    <string name="patni_ka_gotr">जीवनसाथी का गोत्र</string>
    <string name="patni_ka_ganv">जीवनसाथी का गाँव</string>
    <string name="shadi_ki_tihi">शादी की तिथि</string>
    <string name="jiwan_sathi_patni">जीवनसाथी</string>
    <string name="beta_beti">बेटा-बेटी</string>
    <string name="ganv">गाँव</string>
    <string name="jila">जिला</string>
    <string name="member_name">सदस्य का नाम</string>
    <string name="choose_date">तिथि चुने</string>
    <string name="no_date_selected">कोई तिथि नहीं</string>
    <string name="unmarried">अविवाहित</string>
    <string name="married">विवाहित</string>
    <string name="save">सहेजे / Save</string>
    <string name="cancel">छोड़े</string>
    <string name="purush">पुरुष</string>
    <string name="mahila">महिला</string>
    <string name="mobile_no_primary">प्राथमिक मोबाइल नंबर</string>
    <string name="mobile_no_secondary">दूसरा मोबाइल नंबर</string>
    <string name="divorced">तलाकशुदा</string>
    <string name="widow">विधवा / विधुर</string>
    <string name="second_married">जीवनसाथी की म्रत्यु के बाद दुबारा विविहित</string>
    <string name="jiwansathi_ka_ganv">जीवनसाथी का गाँव</string>
    <string name="jiwansathi_ka_gotr">जीवनसाथी का गोत्र</string>
    <string name="jiwansathi_ka_naam">जीवनसाथी का नाम</string>
    <string name="sadi_tarikh">शादी की तिथि</string>
    <string name="jnm_tithi">जन्म तिथि</string>
    <string name="beta_beti_jode">बेटा बेटी जोड़े +</string>
    <string name="married_after_death">तलाक के बाद दुबारा विवाहित</string>
    <string name="add_past_jiwansathi">भूतपूर्व जीवनसाथी जोड़े+</string>
    <string name="bche_ka_naam">बच्चे का नाम</string>
    <string name="bache_ka_ling">बच्चे का लिंग</string>
    <string name="bache_ka_ganv">बच्चे का गाँव</string>
    <string name="add">जोड़े</string>
    <string name="donation_money">दान की राशि</string>
    <string name="donation_list">दानदाता सूचि</string>
    <string name="notification">अधिसूचना</string>
    <string name="rajy">राज्य</string>
    <string name="tahsil">तहसील</string>
    <string name="thik">ठीक है</string>
    <string name="donate_kren">दान करें</string>
    <string name="get_started">शुरू करें</string>
    <string name="something_wrong">कुछ गडबड है! दुबारा प्रयास करें|</string>
    <string name="loading">लोड हो रहा है!!!!</string>
    <string name="prthvi_wasi">पृथ्वी वासी</string>
    <string name="swargwasi">स्वर्गवासी</string>
    <string name="mrn_tithi">मरण तिथि</string>
    <string name="please_fill_all_inputs">कृपया सभी इनपुट को भरें|</string>
    <string name="sikayt">शिकायत</string>
    <string name="above_input">कृपया पहले उपर के सभी इनपुट को भरें !!</string>
    <string name="contact_us_problem">कोई समस्या है कृपया हमे संपर्क करें!!</string>
    <string name="photo_not_there">फोटो उपलब्ध नहीं!</string>
    <string name="last_edited">अंतिम संपादित किया गया!!</string>
    <string name="editing_key">संपादित कुंजी</string>
    <string name="wrong_input">कृपया निचे दिये गये नंबर पर संपर्क करें अगर आप इसे संपादित करना चाहते है तो !!</string>
    <string name="saved">सहेजा गया</string>
    <string name="delete">मिटाएँ</string>
    <string name="sure_delete">क्या आप सच में मिटाना चाहतें है!!</string>
    <string name="photo_chune">फोटो चुने…</string>
    <string name="camara">कैमरा</string>
    <string name="gallary">गेलरी</string>
    <string name="mukhy_prsth">मुख्य पृष्ठ पर जाएँ</string>
    <string name="k_bare_me">मुख्य जानकारी</string>
    <string name="address">पता / स्थाई निवासी </string>
    <string name="naam">नाम</string>
    <string name="dot">-</string>
    <string name="pita">पिता जी</string>
    <string name="mata_ji">माता जी</string>
    <string name="pita_ki_gotr">पिता का गोत्र</string>
    <string name="please">इस सदस्य को अंतिम बार इस मोबाइल नंबर</string>
    <string name="sampadit">से संपादित किया गया है, \n संपादित कुंजी प्राप्त करने के लिए</string>
    <string name="last_string">से संपर्क करें \n अन्य किसी सहायता / शिकायत / सुझाव के लिए \'शिकायत/सुझाव पर जाएँ\'</string>
    <string name="smpadit_kunji_request">संपादित कुजी यंहा लिखें</string>
    <string name="member_name_ynha_likhen">सदस्य का नाम यहाँ लिखें</string>
    <string name="gotr_likhen">गोत्र यहाँ लिखें</string>
    <string name="date_fomat">DD/MM/YYYY</string>
    <string name="wasi">वासी</string>
    <string name="vivahik_sthithi_chune">विवाहिक स्थिति चुने : </string>
    <string name="sheksnik_yogyta_chene">शेक्षणिक योग्यता चुने : </string>
    <string name="kary_chune">कार्य चुने…</string>
    <string name="no_saved">बिना सहेजें जाएँ</string>
    <string name="this_will_not_saved">यह नहीं सहेजा गया</string>
    <string name="ruken">रुकें</string>
    <string name="you_cant_change">एक बार Save / सहेजने के बाद आप दुबारा किसी भी व्यक्ति को हटा नहीं सकते हैं| इसलिए Save / सहेजने से पहले फिर सोच लेवें|</string>
    <string name="please_add_past_partner">कृपया भूतपूर्व जीवनसाथी जोड़े</string>
    <string name="remove_from_saved_list">क्या आप इसे सुरक्षित सूचि से हटाना चाहते है?</string>
    <string name="cant_change_">इसे आप नहीं बदल सकते!\n अगर आप इसे बदलना चाहते है तो इस व्यक्ति की जानकारी संपादित व्यक्ति की प्रोफाइल से करें| अगर फिर भी कोई मदद चाहिए तो शिकायत करें|</string>
    <string name="wrong_single_input">यह गलत चुनाव है|\n आप विवाहित / तलाकसुदा / विधवा / विधुर से वापस अविवाहित नहीं बन सकते है|\n कृपया अन्य कोई चुनाव करें|</string>
    <string name="wrong_marriage_status">यह गलत चुनाव है| कृपया सही का चुनाव करें| \n आप तलाक या जीवनसाथी की मृत्यु के पश्चात विवाहित है अत: सही जानकारी साझा करें| कोई समस्या के लिए शिकायत या सुझाव में संपर्क करें|</string>
    <string name="move_to_past_partner">वर्तमान जीवनसाथी को भूतपूर्व जीवनसाथी में स्थानांतरित करें</string>
    <string name="please_add_to_past">कृपया वर्तमान जीवनसाथी में ना लिखें| भूतपूर्व जीवनसाथी में जोड़ देवें|</string>
    <string name="cant_change_after_save">जोड़ने के बाद आप इसे संपादित आप संपादित नहीं कर सकतें है|</string>
    <string name="partner_more_then_one">जीवनसाथी एक से ज्यादा बार मोजूद है|</string>
    <string name="child_more_then_one">बच्चा एक से ज्यादा बार मोजूद है|</string>

    <array name="list_education">

        <item>कोई नहीं</item>
        <item>साक्षर</item>
        <item>पांचवीं पास</item>
        <item>आठवीं पास</item>
        <item>दसवीं पास</item>
        <item>बारहवीं पास</item>
        <item>स्नातक</item>
        <item>स्नातकोतर</item>
        <item>डिप्लोमा</item>
        <item>प्रोफेशनल डिग्री</item>
        <item>डॉक्टरेट</item>
    </array>

    <array name="list_marriage">
        <item>अविवाहित</item>
        <item>विवाहित</item>
        <item>तलाकशुदा</item>
        <item>विधवा / विधुर</item>
        <item>जीवनसाथी की म्रत्यु के बाद दुबारा विविहित</item>
        <item>तलाक के बाद दुबारा विवाहित</item>
    </array>

</resources>
