<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/m_child_village"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/icon_margin"
        android:ems="10"
        android:hint="@string/bache_ka_ganv"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_size" />
    <AutoCompleteTextView
        android:id="@+id/m_child_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/icon_margin"
        android:ems="10"
        android:hint="@string/bche_ka_naam"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_size" />
    <RadioGroup
        android:id="@+id/m_child_gender"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/icon_margin">

        <RadioButton
            android:id="@+id/m_child_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/purush"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/m_child_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/mahila"
            android:textSize="@dimen/text_size" />
    </RadioGroup>
    <Button
        android:id="@+id/add_child"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/icon_margin"
        android:text="@string/add"
        android:textSize="@dimen/mini_title_text" />
</LinearLayout>