<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/past_wife"
                android:textColor="@color/text_color"
                android:gravity="center_horizontal"
                android:textSize="@dimen/mini_title_text" />
            <AutoCompleteTextView
                android:id="@+id/m_current_partner_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/icon_margin"
                android:ems="10"
                android:hint="@string/jiwansathi_ka_gotr"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size" />

            <AutoCompleteTextView
                android:id="@+id/m_current_partner_village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/icon_margin"
                android:ems="10"
                android:hint="@string/jiwansathi_ka_ganv"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size" />


            <AutoCompleteTextView
                android:id="@+id/m_current_partner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/icon_margin"
                android:ems="10"
                android:hint="@string/jiwansathi_ka_naam"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saadi_ki_tithi"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin"
                    android:layout_weight="1"
                    android:onClick="ShadiDate"
                    android:text="@string/sadi_tarikh"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/sadi_ki_tithi_show"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/icon_margin"
                    android:layout_weight="1"
                    android:text="@string/no_date_selected"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <Button
                android:id="@+id/add_partner_child"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/icon_margin"
                android:text="@string/beta_beti_jode"
                android:textSize="@dimen/text_size" />


            <ListView
                android:id="@+id/m_current_beta_beti_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/add_partner"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/icon_margin"
                android:text="@string/add"
                android:textSize="@dimen/mini_title_text" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>