<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/single_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/stock_list_card_radius"
        android:layout_margin="@dimen/stock_list_card_margin"
        app:contentPadding="@dimen/card_view_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:text="@string/jiwansathi_ka_naam"/>
                        <TextView
                            android:id="@+id/jiwansathi_ka_naam"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_size"
                            android:text="@string/jiwansathi_ka_naam"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:text="@string/jiwansathi_ka_gotr"/>
                        <TextView
                            android:id="@+id/jiwansathi_ka_gotr"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_size"
                            android:text="@string/jiwansathi_ka_gotr"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:text="@string/jiwansathi_ka_ganv"/>
                        <TextView
                            android:id="@+id/jiwansathi_ka_ganv"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_size"
                            android:text="@string/jiwansathi_ka_ganv"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:text="@string/sadi_tarikh"/>
                        <TextView
                            android:id="@+id/sadi_tarikh"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_size"
                            android:text="@string/sadi_tarikh"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/card_view_padding">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:text="@string/naam"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.8"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:text="@string/gender"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1.2"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:text="@string/ganv"/>

                    </LinearLayout>
                    <ListView
                        android:id="@+id/child_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>